@@ -20,6 +20,7 @@
 - NinepatchDrawable is now a TransformDrawable.
 - API Change: Group add* methods no longer remove and re-add the actor if it is already in the group, instead they do nothing.
 - API Change: g2d.Animation is now generic so it can support Drawables, PolygonRegions, NinePatches, etc. To fix existing code, specify the TextureRegion type in animation declarations (and instantiations in Java 6), i.e. Animation<TextureRegion> myAnimation = new Animation<TextureRegion>(...);
+- Added ShaderProgramLoader for AssetManager.
 
 [1.9.4]
 - Moved snapping from ProgressBar to Slider to prevent snapping when setting the value programmatically.
